[package]
name = "libmarkdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
pulldown-cmark = { git = "https://github.com/endaytrer/pulldown-cmark.git" }
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"] } 
wasm-bindgen = "0.2.88"
